--- a/src/index.css
+++ b/src/index.css
@@ -33,8 +33,14 @@ img {
 }
 
 @media (max-width: 700px) {
-  img {
+/*  img {
     display: none;
+  }*/
+  li.right {
+    grid-column-start: 2;
+  }
+  img {
+    width: 100%;
   }
   ul {
     grid-template-columns: 10px 70% auto;
